# esp-hid-gamepad

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: ci.yml  release.yml
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/basic/main/: main.c
include/: hid_gamepad.h
src/: hid_gamepad.c  tusb_config.h
test/: CMakeLists.txt  test_builder.c  test_main.c  test_report.c
test/include/: esp_err.h  esp_log.h  hid_gamepad_pack.h
